Section 4 Django App Components complete

--- a/djangosite/templates/home.html
+++ b/djangosite/templates/home.html
@@ -7,4 +7,12 @@
 {{ user }}
 {{ user.is_authenticated }}
 
+{% if user.is_authenticated%}
+    <h1>User data loaded</h1>
+    {% for i in my_list%}
+        <li> {{i}} </li>
+    {% endfor %}
+{% endif %}
+
+
 {% endblock %}
